# MusicForge

./: .context.md  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MusicForge.sln  README.md  SECURITY.md  backlog.csv  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md
protos/: worker.proto
src/MusicForge.Api/: Dockerfile  MusicForge.Api.csproj  Program.cs  ServiceCollectionExtensions.cs
src/MusicForge.Api/DTOs/: ApiDTOs.cs
src/MusicForge.Api/Endpoints/: HealthEndpoints.cs  ProjectEndpoints.cs
src/MusicForge.Api/Hubs/: GenerationHub.cs
src/MusicForge.Application/: MusicForge.Application.csproj
src/MusicForge.Cli/: MusicForge.Cli.csproj  Program.cs
src/MusicForge.Infrastructure/: MusicForge.Infrastructure.csproj
tests/MusicForge.Application.Tests/: MusicForge.Application.Tests.csproj  UnitTest1.cs
tests/MusicForge.Domain.Tests/: DomainTests.cs  MusicForge.Domain.Tests.csproj
tests/MusicForge.Integration.Tests/: EndToEndTests.cs  MusicForge.Integration.Tests.csproj  ProjectPersistenceTests.cs  UnitTest1.cs  WorkerClientTests.cs
workers/python/: Dockerfile  README.md  generate_grpc.sh  pyproject.toml
workers/python/src/: config.py  server.py
workers/python/src/components/: __init__.py  bark.py  demucs.py  musicgen.py  theory_engine.py
workers/python/src/grpc_generated/: worker_pb2.py  worker_pb2.pyi  worker_pb2_grpc.py
workers/python/tests/: test_config.py  test_server.py  test_theory_engine.py
(+42 files in other folders)
